# finance-news-aggregator

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt  setup.py
.github/: FUNDING.yml
.github/instructions/: changelog.instructions.md  linting.instructions.md  pylint.instructions.md  sample-files.instructions.md  test-coverage.instructions.md
.github/workflows/: python-package.yml  python-publish.yml
configs/: write_config.py
finnews/: __init__.py  article.py  async_client.py  client.py  cnbc.py  cnn_finance.py  exceptions.py  fields.py  market_watch.py  nasdaq.py  news_enum.py  parser.py  seeking_alpha.py  sp_global.py  wsj.py  yahoo_finance.py
resources/: economic_times.xlsx  rss_feeds.md
samples/: use_advanced_features.py  use_client.py  use_cnbc_client.py  use_cnn_finance.py  use_market_watch_client.py  use_nasdaq_client.py  use_news_client.py  use_seeking_alpha.py  use_sp_global_client.py  use_wsj_client.py  use_yahoo_finance_client.py
samples/responses/: cnbc_all_news_feeds.jsonc  cnbc_blog_news.jsonc  cnbc_investing_news.jsonc  cnbc_phase4_demo.jsonc  cnbc_real_estate_news.jsonc  cnbc_top_news.jsonc  cnbc_tv_and_video_news.jsonc  cnbc_tv_asia_news.jsonc  cnbc_tv_europe_news.jsonc  cnn_finance_all_stories.jsonc  cnn_finance_autos.jsonc  cnn_finance_colleges.jsonc  cnn_finance_companies.jsonc  cnn_finance_economy.jsonc  cnn_finance_funds.jsonc  cnn_finance_luxury.jsonc  (+81 more)
tests/: conftest.py  test.py  test_article.py  test_async_client.py  test_client.py  test_deprecations.py  test_enhancements.py  test_exceptions.py  test_parser.py  test_phase3.py  test_phase4.py  test_topics.py
(+2 files in other folders)
